<resources>
    <string name="app_name">AttendanceApp</string>
    <string name="login_text">Login</string>
    <string name="register_text">Sign up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="missing_account_question">Not create your account yet? </string>
    <string name="has_account_question">Already have account? </string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_major">Major</string>
    <string name="introduce_app_title">
        Attendance App
    </string>
    <string name="newest_attendance">
        Newest
    </string>
    <string name="my_attendance">
        My attendance
    </string>
    <string name="view_registered_attendance_action">Registered</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_attendance_detail">AttendanceDetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="attendance_tab_1">About</string>
    <string name="attendance_tab_2">Members</string>
    <string name="join_attendance">Make a role call</string>
    <string name="attendance_title_label">Title</string>
    <string name="title_input_prompt">Enter meeting title</string>

    <string name="my_profile_tab_1">My meetings</string>
    <string name="my_profile_tab_2">Registered meetings</string>
    <string name="shared_tokens">shared_token</string>
</resources>