<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce_app_title"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_button"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:id="@+id/register_button"
        android:layout_below="@id/login_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        />
</RelativeLayout>